[package]
name = "merkletreers"
version = "0.3.1"
edition = "2021"
description = "🌳 The simple and easy implementation of Merkle Tree"
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
repository = "https://github.com/olivmath/merkletreers.git"
documentation = "https://pypi.org/project/merkletreers/"
readme = "README.md"
license = "MIT"
keywords = [
  "merkle-tree",
  "merkle-proof",
  "merkle-root",
  "keccak256",
  "blockchain"
]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
